// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.domain.admin.v0;

import "com/digitalasset/canton/domain/admin/v0/sequencer_administration_service.proto";
import "google/protobuf/timestamp.proto";
import "scalapb/scalapb.proto";

message SequencerSnapshot {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  google.protobuf.Timestamp latest_timestamp = 1;
  map<string, int64> head_member_counters = 2;
  com.digitalasset.canton.domain.admin.v0.SequencerPruningStatus status = 3;
  ImplementationSpecificInfo additional = 4;
}

// additional sequencer implementation specific piece of data
message ImplementationSpecificInfo {
  string implementation_name = 1;
  bytes info = 2;
}
